2008-01-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: unescaped category name because over escape on Wiki
	style.

2007-12-16 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.0.

2007-10-31 TADA Tadashi <sho@spc.gr.jp>
	* skel/conf.rhtml: inserted submit button to page top.

2007-10-07 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: ACCESSKEY changed in mobile mode.
	* plugin/00default.rb: replaced Update link to Edit in mobile navi menu.

2007-08-12 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb, plugin/10spamfilter.rb: support change comment
	description in preference page of spam filter. thanks for hsbt.

2007-08-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, plugin/00default.rb: specify base_url in preference page.

2007-07-17 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: add 'rel="nofollow"' attribute to add/edit navigation.

2007-07-14  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/filter/spam.rb: ignore invalid regular expressions.

2007-06-30 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: set @date to newest visible date in latest mode.
	* 00default.rb: skip hidden diary for mobile navigation in latest mode.

2007-06-05 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.beginner: add spam filter conditions.

2007-05-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, tdiary.conf.*: add/delete some bots.

2007-05-05 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: TrackBacks save the date of received to spam log.
	* theme/base.css: add 'span.message'.

2007-05-03 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.beginner: update spam filter conditions.
	* doc/INSTALL.html: add about tdiary.conf.beginner.
	* theme/base.css: add style for footnote.rb, my-sequel.rb and
	category_to_tag.rb plugins.

2007-04-30 TADA Tadashi <sho@spc.gr.jp>
	* skel/update.rhtml*, plugin/*/00default.rb; add label elements in update
	and preferences form.

2007-04-29 TADA Tadashi <sho@spc.gr.jp>
	* skel/i.category.rb, plugin/00default.rb: category support mobile mode
	more.