@@ -1,13 +1,13 @@
 =begin
 == NAME
 tDiary: the "tsukkomi-able" web diary system.
-tdiary.rb $Revision: 1.325 $
+tdiary.rb $Revision: 1.326 $
 
 Copyright (C) 2001-2007, TADA Tadashi <sho@spc.gr.jp>
 You can redistribute it and/or modify it under GPL2.
 =end
 
-TDIARY_VERSION = '2.2.0.20080103'
+TDIARY_VERSION = '2.2.0.20080105'
 
 $:.insert( 1, File::dirname( __FILE__ ) + '/misc/lib' )
 
